k8s/_draft/base-20260219/ingress/api-gateway-ingress.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"api-gateway-ingress","namespace":"semicolon"},"spec":{"ingressClassName":"traefik","rules":[{"host":"api.dukku.shop","http":{"paths":[{"backend":{"service":{"name":"auth-service","port":{"number":80}}},"path":"/api/v1/auth","pathType":"Prefix"},{"backend":{"service":{"name":"user-service","port":{"number":80}}},"path":"/api/v1/users","pathType":"Pr [...]
    creationTimestamp: "2026-02-18T11:37:02Z"
    generation: 4
    name: api-gateway-ingress
    namespace: semicolon
    resourceVersion: "173626"
    uid: 495d1716-8137-4ab4-a487-5b6bddd166a7
  spec:
    ingressClassName: traefik
    rules:
    - host: api.dukku.shop
      http:
        paths:
        - backend:
            service:
              name: auth-service
              port:
                number: 80
          path: /api/v1/auth
          pathType: Prefix
        - backend:
            service:
              name: user-service
              port:
                number: 80
          path: /api/v1/users
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/products
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/categories
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/carts
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/sellers
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/shops
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/seller-reviews
          pathType: Prefix
        - backend:
            service:
              name: order-service
              port:
                number: 80
          path: /api/v1/orders
          pathType: Prefix
        - backend:
            service:
              name: payment-service
              port:
                number: 80
          path: /api/v1/payments
          pathType: Prefix
        - backend:
            service:
              name: coupon-service
              port:
                number: 80
          path: /api/v1/coupons
          pathType: Prefix
        - backend:
            service:
              name: deposit-service
              port:
                number: 80
          path: /api/v1/deposits
          pathType: Prefix
        - backend:
            service:
              name: settlement-service
              port:
                number: 80
          path: /api/v1/settlements
          pathType: Prefix
        - backend:
            service:
              name: user-service
              port:
                number: 80
          path: /api/v1/admin/users
          pathType: Prefix
        - backend:
            service:
              name: product-service
              port:
                number: 80
          path: /api/v1/admin/products
          pathType: Prefix
        - backend:
            service:
              name: order-service
              port:
                number: 80
          path: /api/v1/admin/orders
          pathType: Prefix
        - backend:
            service:
              name: payment-service
              port:
                number: 80
          path: /api/v1/admin/payments
          pathType: Prefix
        - backend:
            service:
              name: coupon-service
              port:
                number: 80
          path: /api/v1/admin/coupons
          pathType: Prefix
        - backend:
            service:
              name: deposit-service
              port:
                number: 80
          path: /api/v1/admin/deposits
          pathType: Prefix
        - backend:
            service:
              name: settlement-service
              port:
                number: 80
          path: /api/v1/admin/settlement
          pathType: Prefix
    tls:
    - hosts:
      - api.dukku.shop
      secretName: api-dukku-shop-tls
